[package]
name = "axum-masquerade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-core = "0.4.3"
http = "1.1.0"
tower = "0.4.13"

[dev-dependencies]
http-body-util = "0.1.1"
tokio = { version = "1.37.0", features = ["macros", "test-util"] }
