[package]
name = "axum-masquerade"
description = "Responses and headers to mimic other web technologies to confuse attackers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-core = "0.4.3"
http = "1.1.0"
tower = "0.4.13"

[dev-dependencies]
axum = "0.7.5"
http-body-util = "0.1.1"
hyper = "1.3.1"
tokio = { version = "1.37.0", features = ["macros", "test-util"] }

[lints.clippy]
all = "warn"
# restriction = "warn"
pedantic = "warn"
nursery = "warn"
# cargo = "warn"
module_name_repetitions = "allow"
